Quick Favorites and shortcuts are broken for many properties. #91225

Closed
opened 2021-09-06 19:12:56 +02:00 by Poly Lou · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 08:56, hash: 81978594a8
Worked: 2.93.4

Caused by 3e4d720ae4

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

  1. Open Blender.
  2. In 3D Viewport editor, click Viewport Overlays drop down menu, then hover mouse on chickbox of some options like "Face Orientation", then right click , choose "Add to Quick Favorites".
  3. Hit Q on keyboard, Face Orientation not show in Quick Favorites menu.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 08:56, hash: `81978594a8` Worked: 2.93.4 Caused by 3e4d720ae4 **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] 1. Open Blender. 2. In 3D Viewport editor, click Viewport Overlays drop down menu, then hover mouse on chickbox of some options like "Face Orientation", then right click , choose "Add to Quick Favorites". 3. Hit Q on keyboard, Face Orientation not show in Quick Favorites menu.
Author

Added subscriber: @XiTi

Added subscriber: @XiTi
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-09-07 08:17:32 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

May be similar to #59244 (Quick Favorites: add support for operator/prop enums (e.g. "Set origin")) ?

May be similar to #59244 (Quick Favorites: add support for operator/prop enums (e.g. "Set origin")) ?
Author

I've tried same steps in Blender 2.93.4, it works fine.

I've tried same steps in Blender 2.93.4, it works fine.
Member

In #91225#1217003, @PratikPB2123 wrote:
May be similar to #59244 (Quick Favorites: add support for operator/prop enums (e.g. "Set origin")) ?

Nope, this broke with the recent 3e4d720ae4, I'm on it.

> In #91225#1217003, @PratikPB2123 wrote: > May be similar to #59244 (Quick Favorites: add support for operator/prop enums (e.g. "Set origin")) ? Nope, this broke with the recent 3e4d720ae4, I'm on it.
Philipp Oeser removed their assignment 2021-09-07 11:24:56 +02:00
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Basically everything involving a path with some nested struct fails:
space_data.overlay.prop fails whereas space_data.prop is fine

One idea is to specifiy this directly on the member_id, like so [just an excerpt, would have to be done in more places]:
P2367: T91225_snippet



diff --git a/source/blender/windowmanager/intern/wm_operators.c b/source/blender/windowmanager/intern/wm_operators.c
index df051328990..745d5d3678c 100644
--- a/source/blender/windowmanager/intern/wm_operators.c
+++ b/source/blender/windowmanager/intern/wm_operators.c
@@ -551,9 +551,8 @@ static const char *wm_context_member_from_ptr(bContext *C, const PointerRNA *ptr
           case SPACE_VIEW3D: {
             const View3D *v3d = (View3D *)space_data;
             const View3DShading *shading = &v3d->shading;
-
-            TEST_PTR_DATA_TYPE("space_data", RNA_View3DOverlay, ptr, v3d);
-            TEST_PTR_DATA_TYPE("space_data", RNA_View3DShading, ptr, shading);
+            TEST_PTR_DATA_TYPE("space_data.overlay", RNA_View3DOverlay, ptr, v3d);
+            TEST_PTR_DATA_TYPE("space_data.shading", RNA_View3DShading, ptr, shading);
             break;
           }
           case SPACE_GRAPH: {

But @ideasman42 might have better ideas for it, will step down.

Basically everything involving a path with some nested struct fails: space_data.overlay.prop fails whereas space_data.prop is fine One idea is to specifiy this directly on the `member_id`, like so [just an excerpt, would have to be done in more places]: [P2367: T91225_snippet](https://archive.blender.org/developer/P2367.txt) ``` diff --git a/source/blender/windowmanager/intern/wm_operators.c b/source/blender/windowmanager/intern/wm_operators.c index df051328990..745d5d3678c 100644 --- a/source/blender/windowmanager/intern/wm_operators.c +++ b/source/blender/windowmanager/intern/wm_operators.c @@ -551,9 +551,8 @@ static const char *wm_context_member_from_ptr(bContext *C, const PointerRNA *ptr case SPACE_VIEW3D: { const View3D *v3d = (View3D *)space_data; const View3DShading *shading = &v3d->shading; - - TEST_PTR_DATA_TYPE("space_data", RNA_View3DOverlay, ptr, v3d); - TEST_PTR_DATA_TYPE("space_data", RNA_View3DShading, ptr, shading); + TEST_PTR_DATA_TYPE("space_data.overlay", RNA_View3DOverlay, ptr, v3d); + TEST_PTR_DATA_TYPE("space_data.shading", RNA_View3DShading, ptr, shading); break; } case SPACE_GRAPH: { ``` But @ideasman42 might have better ideas for it, will step down.
Philipp Oeser changed title from Can't add Viewport Overlays options to quick favorites menu. to Quick Favorites and shortcuts are broken for many properties. 2021-09-07 11:25:46 +02:00

@lichtwerk your patch looks correct, think this is fine to go in, although the other TEST_PTR_DATA_TYPE uses with space_data need updating too.

@lichtwerk your patch looks correct, think this is fine to go in, although the other `TEST_PTR_DATA_TYPE` uses with space_data need updating too.

This issue was referenced by 8d40d61af0

This issue was referenced by 8d40d61af093fcf528ce282b740eca119a5ee5d3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2021-09-08 08:30:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91225
No description provided.